--- a/styles/partials/page-give-classes.css
+++ b/styles/partials/page-give-classes.css
@@ -95,7 +95,7 @@
 #page-give-classes main footer button {
     width: 100%;
     height: 5.6rem;
-    background: var(--color-secundary);
+    background: var(--color-secondary);
     color: var(--color-button-text);
     border: 0;
     border-radius: .8rem;
@@ -105,7 +105,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    text-transform: none;
+    text-decoration: none;
     
     transition: 0.2s;
     margin-top: 3.2rem;
