--- a/Anotaçoes/pratica.css
+++ b/Anotaçoes/pratica.css
@@ -11,3 +11,47 @@
     color: var(--color-text-in-primary);
 }
 
+#search-teacher .select-block {
+    margin-bottom: 1;4rem;
+}
+
+#search-teachers button {
+    width: 100%;
+    height: 5.6rem;
+    background: var(--color-secondary);
+    color: var(--color-button-text);
+    border: 0;
+    border-radius: .8rem;
+    cursor: pointer;
+    font:700 1.6rem Archivo;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+
+    transition: background 0.2s;
+    margin-top: 3.2rem;
+}
+
+#search-teachers button:hover {
+    background-color: var(--color-secondary-dark);
+}
+
+.teacher-item {
+    background-color: var(--color-box-base);
+    border: 1px solid var(--color-line-in-white);
+    border-radius: .8rem;
+    margin-top: 2.4rem;
+}
+
+.teacher-item head {
+    padding: 3.2rem 2rem;
+    display: flex;
+    align-items: center;
+}
+
+.teacher-item header img {
+    width: 8rem;
+    height: 8rem;
+    border-radius: 50%;
+}
