--- a/Anotaçoes/pratica.css
+++ b/Anotaçoes/pratica.css
@@ -138,5 +138,54 @@
 
     .page-header .header-content {
         max-width: 740px;
+
+        margin: 0 auto;
+
+        flex: 1 1;
+        padding-bottom: 48px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .page-header .header-content strong {
+        max-width: 350px;
+    }
+
+    .teacher-item header,
+    .teacher-item footer{
+        padding: 32px;
+    }
+
+    #search-teachers {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        gap: 16px;
+        position: absolute;
+        bottom: -28px;
+    }
+
+    #page-study main {
+        padding: 32px 0;
+        max-width: 740px;
+        margin: 0 auto;
+    }
+
+    #search-teachers .select-block {
+        margin-bottom: 0;
+    }
+
+    .teacher-item > p {
+        padding: 0 32px;
+    }
+
+    .teacher-item footer p strong {
+        display: initial;
+        margin-left: 16px;
+        justify-content: center;
+    }
+
+    .teacher-item footer botton img {
+        margin-right: 16px;
     }
 }
