--- a/Anotaçoes/pratica.css
+++ b/Anotaçoes/pratica.css
@@ -1,6 +1,3 @@
-
-
-
 .select-block label,
 .input-block label,
 .textarea-block label {
@@ -10,7 +7,7 @@
 
 .input-block input,
 .select-block select,
-.textarea-block textarea{
+.textarea-block textarea {
     width: 100%;
     height: 5.6rem;
     margin-top: 0.8rem;
@@ -18,13 +15,38 @@
     background: var(--color-input-background);
     border: 1px solid var(--color-line-in-white);
     outline: 0;
-    padding:  0 1.6rem;
+    padding: 0 1.6rem;
     font: 1.6rem Archivo;
 }
 
 .textarea-block textarea {
     padding: 1.2rem 1.6rem;
-    height: 16rem;
+    height:  16rem;
 
-    resize: vertical
+    resize: vertical;
+}
+
+.input-block
+.textarea-block {
+    position: relative;
+}
+
+.input-block:focus-within::after,
+.textarea-block:focus-within::after{
+    content: "";
+
+    width: calc(100% - 3.2rem);
+    height: 2px;
+    background: var(--color-primary-light);
+
+    position: absolute;
+    left: 1.6rem;
+    bottom: 0px;
+}
+
+
+
+
+
+
 }
