--- a/Anotaçoes/praticaapk.css
+++ b/Anotaçoes/praticaapk.css
@@ -21,3 +21,74 @@
     padding: 0 2.4rem;
 }
 
+#page-give-classes fieldset legend {
+    font: 700 2.4rem Archivo;
+    color: var(--color-text-title);
+    margin-bottom: 2.4rem;
+
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    width: 100%;
+
+    padding-bottom: 1.6rem;
+    border-bottom: 1px solid var (--color-line-in-whiter);
+}
+
+#page-give-classes fieldset legend button {
+    background: none;
+    border: 0;
+
+    color: var(--color-primary);
+
+    font: 700 1.6rem Archivo;
+
+    cursor: pointer;
+    
+    transition: 0.2s;
+}
+
+
+#page-give-classes fieldset legend button::hover {
+    transform: translateY(-5px);
+    color: var(--color-primary-dark);
+}
+
+#page-give-classes fieldset+fieldset {
+    margin-top: 6.4rem;
+}
+
+#page-give-classes .input-block+.input-block,
+#page-give-classes .input-block+.textarea-block,
+#page-give-classes .select-block+.input-block {
+    margin-top:  2.4rem;
+}
+
+#page-give-classes main footer {
+    padding: 4rem 2.4rem;
+
+    background: var(--color-box-footer);
+    border-top: 1px solid var(--color-line-in-white);
+    margin-top: 6.4rem;
+}
+
+#page-give-classes main footer p {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    font-size: 1.4rem;
+    line-height: 2.4rem;
+
+    color: var(--color-text-complement);
+}
+
+#page-give-classes main footer p img {
+    margin-right: 2rem;
+}
+
+#page-give-classes main footer button {
+    
+}
+
